// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Optimizers BlankNodeScopeFixer fulltext-lists.rq 1`] = `
"PREFIX schema: <http://schema.org/>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
CONSTRUCT {
  ?resource1 schema:hasDefinedTerm ?resource2.
  ?resource2 rdf:type ?resource4.
  ?resource2 schema:name ?resource7.
}
WHERE {
  {
    SELECT ?resource1 ?resource2 WHERE {
      {
        SELECT DISTINCT ?resource1 ?resource2 WHERE {
          ?resource1 ^schema:inDefinedTermSet ?resource2.
          ?resource2 rdf:type ?resource4.
          VALUES ?resource4 {
            schema:DefinedTerm
          }
          OPTIONAL { ?resource2 ^schema:inDefinedTermSet ?resource5. }
          OPTIONAL { ?resource2 schema:name ?resource6. }
        }
        ORDER BY (?resource5) (?resource6)
        LIMIT 10
      }
      ?resource1 schema:hasDefinedTerm ?resource10.
      {
        ?resource10 schema:name ?resource12.
        {
          ?resource10 <http://jena.apache.org/text#query> _:e_b261;
            schema:name ?resource12.
          _:e_b261 rdf:first schema:name;
            rdf:rest _:e_b262.
          _:e_b262 rdf:first \\"foo*\\";
            rdf:rest rdf:nil.
          FILTER(REGEX(?resource12, \\"^foo\\", \\"i\\"))
        }
      }
    }
  }
  UNION
  {
    SELECT ?resource2 ?resource4 ?resource7 WHERE {
      {
        SELECT DISTINCT ?resource1 ?resource2 WHERE {
          ?resource1 ^schema:inDefinedTermSet ?resource2.
          ?resource2 rdf:type ?resource4.
          VALUES ?resource4 {
            schema:DefinedTerm
          }
          OPTIONAL { ?resource2 ^schema:inDefinedTermSet ?resource5. }
          OPTIONAL { ?resource2 schema:name ?resource6. }
        }
        ORDER BY (?resource5) (?resource6)
        LIMIT 10
      }
      { ?resource2 rdf:type ?resource4. }
      UNION
      { ?resource2 schema:name ?resource7. }
      ?resource1 schema:hasDefinedTerm ?resource10.
      {
        ?resource10 schema:name ?resource12.
        {
          ?resource10 <http://jena.apache.org/text#query> _:s7_e_b261;
            schema:name ?resource12.
          _:s7_e_b261 rdf:first schema:name;
            rdf:rest _:s7_e_b262.
          _:s7_e_b262 rdf:first \\"foo*\\";
            rdf:rest rdf:nil.
          FILTER(REGEX(?resource12, \\"^foo\\", \\"i\\"))
        }
      }
    }
  }
}"
`;

exports[`Optimizers BlankNodeScopeFixer multiple-levels.rq 1`] = `
"PREFIX ex: <http://example.org/>
ASK WHERE {
  _:e_foo <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ex:Foo.
  {
    _:s1_e_foo <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ex:Bar.
    {
      _:s2_e_foo <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ex:Baz.
      { _:s3_e_foo <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ex:Qux. }
    }
  }
}"
`;

exports[`Optimizers BlankNodeScopeFixer sub-query.rq 1`] = `
"PREFIX ex: <http://example.org/>
ASK WHERE {
  { SELECT * WHERE { _:e_foo <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ex:Foo. } }
  UNION
  { SELECT * WHERE { _:s2_e_foo <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ex:Bar. } }
}"
`;

exports[`Optimizers BlankNodeScopeFixer union.rq 1`] = `
"PREFIX ex: <http://example.org/>
ASK WHERE {
  { _:e_foo <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ex:Bar. }
  UNION
  { _:s2_e_foo <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ex:Foo. }
  UNION
  { _:s3_e_foo <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ex:Baz. }
}"
`;

exports[`Optimizers BlankNodeScopeFixer used-twice.rq 1`] = `
"PREFIX ex: <http://example.org/>
ASK WHERE {
  _:e_foo <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ex:Foo.
  { _:s1_e_foo <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ex:Bar. }
}"
`;

exports[`Optimizers BlankNodeScopeFixer used-twice-in-scope.rq 1`] = `
"PREFIX ex: <http://example.org/>
ASK WHERE {
  _:e_foo <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ex:Foo.
  { _:s1_e_foo <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ex:Bar, ex:Baz. }
}"
`;

exports[`Optimizers BlankNodeScopeFixer used-twice-top-scope.rq 1`] = `
"PREFIX ex: <http://example.org/>
ASK WHERE { _:e_foo <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> ex:Foo, ex:Bar. }"
`;

exports[`Optimizers UnionRepeatedPatternsRemover multiple-patterns.rq 1`] = `
"PREFIX schema: <http://schema.org/>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
CONSTRUCT {
  ?resource8 schema:containedInPlace ?resource1.
  ?resource8 schema:identifier ?resource11.
  ?resource8 schema:name ?resource12.
  ?resource8 schema:description ?resource13.
  ?resource8 schema:position ?resource14.
  ?resource8 schema:alternateName ?resource15.
  ?resource8 rdf:type ?resource10.
}
WHERE {
  VALUES ?resource1 {
    <https://ld.admin.ch/country/CHE>
  }
  ?resource1 ^schema:containedInPlace ?resource8.
  ?resource8 rdf:type ?resource10.
  VALUES ?resource10 {
    <https://environment.ld.admin.ch/foen/nfi/UnitOfReference/366>
  }
  { ?resource8 schema:identifier ?resource11. }
  UNION
  { ?resource8 schema:name ?resource12. }
  UNION
  { ?resource8 schema:description ?resource13. }
  UNION
  { ?resource8 schema:position ?resource14. }
  UNION
  { ?resource8 schema:alternateName ?resource15. }
}"
`;

exports[`Optimizers UnionRepeatedPatternsRemover partial-match.rq 1`] = `
"PREFIX schema: <http://schema.org/>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
CONSTRUCT {
  ?resource8 schema:containedInPlace ?resource1.
  ?resource8 schema:identifier ?resource11.
  ?resource8 schema:name ?resource12.
  ?resource8 schema:description ?resource13.
  ?resource8 schema:position ?resource14.
  ?resource8 schema:alternateName ?resource15.
  ?resource8 rdf:type ?resource10.
}
WHERE {
  VALUES ?resource1 {
    <https://ld.admin.ch/country/CHE>
  }
  ?resource1 ^schema:containedInPlace ?resource8.
  ?resource8 rdf:type ?resource10.
  VALUES ?resource10 {
    <https://environment.ld.admin.ch/foen/nfi/UnitOfReference/366>
  }
  { ?resource8 schema:identifier ?resource11. }
  UNION
  { ?resource8 schema:name ?resource12. }
  UNION
  { ?resource8 schema:description ?resource13. }
  UNION
  { ?resource8 schema:position ?resource14. }
  UNION
  { ?resource8 schema:alternateName ?resource15. }
  UNION
  { ?resource10 (rdfs:subClassOf*) schema:Place. }
}"
`;

exports[`Optimizers UnionRepeatedPatternsRemover remove-useless-union.rq 1`] = `
"PREFIX schema: <http://schema.org/>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
CONSTRUCT {
  ?resource8 schema:containedInPlace ?resource1.
  ?resource8 schema:identifier ?resource11.
  ?resource8 rdf:type ?resource10.
}
WHERE {
  VALUES ?resource1 {
    <https://ld.admin.ch/country/CHE>
  }
  ?resource1 ^schema:containedInPlace ?resource8.
  ?resource8 rdf:type ?resource10.
  VALUES ?resource10 {
    <https://environment.ld.admin.ch/foen/nfi/UnitOfReference/366>
  }
  ?resource8 schema:identifier ?resource11.
  FILTER(REGEX(?resource11, \\"^test\\"))
  
}"
`;

exports[`Optimizers UnionRepeatedPatternsRemover single-pattern.rq 1`] = `
"PREFIX schema: <http://schema.org/>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
CONSTRUCT {
  ?resource8 schema:containedInPlace ?resource1.
  ?resource8 schema:identifier ?resource11.
  ?resource8 schema:name ?resource12.
  ?resource8 schema:description ?resource13.
  ?resource8 schema:position ?resource14.
  ?resource8 schema:alternateName ?resource15.
  ?resource8 rdf:type ?resource10.
}
WHERE {
  VALUES ?resource1 {
    <https://ld.admin.ch/country/CHE>
  }
  ?resource1 ^schema:containedInPlace ?resource8.
  ?resource8 rdf:type ?resource10.
  VALUES ?resource10 {
    <https://environment.ld.admin.ch/foen/nfi/UnitOfReference/366>
  }
  { ?resource8 schema:identifier ?resource11. }
  UNION
  { ?resource8 schema:name ?resource12. }
  UNION
  { ?resource8 schema:description ?resource13. }
  UNION
  { ?resource8 schema:position ?resource14. }
  UNION
  { ?resource8 schema:alternateName ?resource15. }
}"
`;

exports[`Optimizers UnionRepeatedPatternsRemover subquery.rq 1`] = `
"PREFIX schema: <http://schema.org/>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
CONSTRUCT {
  ?resource8 schema:containedInPlace ?resource1.
  ?resource8 schema:identifier ?resource11.
  ?resource8 schema:name ?resource12.
  ?resource8 schema:description ?resource13.
  ?resource8 schema:position ?resource14.
  ?resource8 schema:alternateName ?resource15.
  ?resource8 rdf:type ?resource10.
}
WHERE {
  {
    {
      SELECT ?resource8 ?resource11 ?resource12 ?resource13 ?resource14 ?resource15 ?resource10 WHERE {
        VALUES ?resource1 {
          <https://ld.admin.ch/country/CHE>
        }
        ?resource1 ^schema:containedInPlace ?resource8.
        ?resource8 rdf:type ?resource10.
        VALUES ?resource10 {
          <https://environment.ld.admin.ch/foen/nfi/UnitOfReference/366>
        }
        { ?resource8 schema:identifier ?resource11. }
        UNION
        { ?resource8 schema:name ?resource12. }
        UNION
        { ?resource8 schema:description ?resource13. }
        UNION
        { ?resource8 schema:position ?resource14. }
        UNION
        { ?resource8 schema:alternateName ?resource15. }
      }
    }
  }
}"
`;

exports[`Optimizers UnionRepeatedPatternsRemover type-in-union.rq 1`] = `
"PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX schema: <http://schema.org/>
CONSTRUCT {
  ?resource1 rdf:type schema:Person.
  ?resource2 ?resource3 ?resource1.
  ?resource1 ?resource6 ?resource7.
}
WHERE {
  ?resource1 rdf:type schema:Person.
  {
    ?resource1 (schema:spouse|schema:children|schema:parent) ?resource2.
    BIND(schema:relatedTo AS ?resource3)
  }
  UNION
  {
    BIND(schema:relatedTo AS ?resource6)
    ?resource1 (schema:spouse|schema:children|schema:parent) ?resource7.
  }
}"
`;

exports[`Optimizers UnionRepeatedPatternsRemover union-becomes-optional.rq 1`] = `
"PREFIX schema: <http://schema.org/>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
CONSTRUCT {
  ?resource8 schema:containedInPlace ?resource1.
  ?resource8 schema:identifier ?resource11.
  ?resource8 rdf:type ?resource10.
}
WHERE {
  VALUES ?resource1 {
    <https://ld.admin.ch/country/CHE>
  }
  ?resource1 ^schema:containedInPlace ?resource8.
  ?resource8 rdf:type ?resource10.
  VALUES ?resource10 {
    <https://environment.ld.admin.ch/foen/nfi/UnitOfReference/366>
  }
  OPTIONAL { ?resource8 schema:identifier ?resource11. }
}"
`;

exports[`Optimizers UnionRepeatedPatternsRemover values.rq 1`] = `
"PREFIX schema: <http://schema.org/>
PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
SELECT * WHERE {
  VALUES ?resource1 {
    <https://ld.admin.ch/country/CHE>
  }
  ?resource1 ^schema:containedInPlace ?resource8.
  ?resource8 rdf:type ?resource10.
  VALUES ?resource10 {
    <https://environment.ld.admin.ch/foen/nfi/UnitOfReference/366>
  }
  { ?resource8 schema:identifier ?resource11. }
  UNION
  { ?resource8 schema:name ?resource12. }
  UNION
  { ?resource8 schema:description ?resource13. }
  UNION
  { ?resource8 schema:position ?resource14. }
  UNION
  { ?resource8 schema:alternateName ?resource15. }
}"
`;

exports[`Optimizers UnionRepeatedPatternsRemover values-in-subquery.rq 1`] = `
"PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX hydra: <http://www.w3.org/ns/hydra/core#>
CONSTRUCT {
  ?resource1 hydra:member ?resource2.
  ?resource1 hydra:totalItems ?resource7.
}
WHERE {
  VALUES ?resource1 {
    <http://example.com/people>
  }
  {
    ?resource1 ((rdf:type*)/hydra:memberAssertion) ?resource4.
    ?resource4 hydra:property ?resource6.
    VALUES ?resource6 {
      rdf:type
    }
    ?resource4 hydra:object ?resource3.
    ?resource3 ^rdf:type ?resource2.
  }
  UNION
  {
    SELECT (COUNT(?resource8) AS ?resource7) WHERE {
      ?resource1 ((rdf:type*)/hydra:memberAssertion) ?resource10.
      ?resource10 hydra:property ?resource12.
      VALUES ?resource12 {
        rdf:type
      }
      ?resource10 hydra:object ?resource9.
      ?resource9 ^rdf:type ?resource8.
      VALUES ?resource1 {
        <http://example.com/people>
      }
    }
  }
}"
`;

exports[`Optimizers UnionRepeatedPatternsRemover values-unique.rq 1`] = `
"PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>
PREFIX schema: <http://schema.org/>
CONSTRUCT {
  ?resource1 rdf:type schema:Person.
  ?resource1 <http://example.org/motherName> ?resource2.
  ?resource1 <http://example.org/fatherName> ?resource6.
}
WHERE {
  ?resource1 rdf:type schema:Person.
  {
    ?resource1 schema:parent ?resource3.
    ?resource3 schema:gender ?resource5.
    VALUES ?resource5 {
      schema:Female
    }
    ?resource3 schema:givenName ?resource2.
  }
  UNION
  {
    ?resource1 schema:parent ?resource7.
    ?resource7 schema:gender ?resource9.
    VALUES ?resource9 {
      schema:Male
    }
    ?resource7 schema:givenName ?resource6.
  }
}"
`;
